extends PanelContainer
class_name InfoBoxRoadPoint


@onready var stat_box_idx = $MarginContainer/VBoxContainer/StatBoxIdx
@onready var stat_box_vector_pos = $MarginContainer/VBoxContainer/StatBoxVectorPos
@onready var stat_box_vector_fwd = $MarginContainer/VBoxContainer/StatBoxVectorFwd
@onready var stat_box_vector_up = $MarginContainer/VBoxContainer/StatBoxVectorUp
@onready var stat_box_curve_size = $MarginContainer/VBoxContainer/StatBoxCurveSize


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
